fix: evaluation for 3 committees needed